<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="vertical">
	
	<Button
		android:id="@+id/verify_device"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dip"
		android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip"
		android:layout_marginTop="20dip"
		android:text="@string/verify_device" />

	<Button
		android:id="@+id/verification_status"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dip"
		android:text="@string/verification_status" />

	<Button
		android:id="@+id/discover_contacts"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dip"
		android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip"
		android:layout_marginTop="50dip"
		android:text="@string/discover_contacts" />

	<Button
		android:id="@+id/recommend_invites"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dip"
		android:text="@string/recommend_invites" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dip"
		android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip"
		android:layout_marginTop="50dip" >

		<Button
			android:id="@+id/installs"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/installs" />

		<Button
			android:id="@+id/referrals"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/referrals" />
	</LinearLayout>

</LinearLayout>